@@ -304,6 +304,7 @@ GMT_LONG GMT_pslegend (struct GMTAPI_CTRL *API, GMT_LONG mode, void *args)
 	char size[GMT_TEXT_LEN256], angle[GMT_TEXT_LEN256], mapscale[GMT_TEXT_LEN256], font[GMT_TEXT_LEN256], lspace[GMT_TEXT_LEN256];
 	char tw[GMT_TEXT_LEN256], jj[GMT_TEXT_LEN256], sarg[GMT_TEXT_LEN256], txtcolor[GMT_TEXT_LEN256], buffer[GMT_BUFSIZ];
 	char bar_cpt[GMT_TEXT_LEN256], bar_gap[GMT_TEXT_LEN256], bar_height[GMT_TEXT_LEN256], bar_opts[GMT_BUFSIZ], *opt = NULL;
+	char *def_rgb = "black";
 	char *line = NULL, string[GMTAPI_STRLEN];
 #ifdef GMT_COMPAT
 	char save_EOF;
@@ -727,13 +728,12 @@ GMT_LONG GMT_pslegend (struct GMTAPI_CTRL *API, GMT_LONG mode, void *args)
 					}
 					else
 						sprintf (sarg, "%g %g", x_off + off_ss, y0);
-					if (txt_c[0] != '-' || txt_d[0] != '-') {
-						sprintf (buffer, ">");
-						if (txt_c[0] != '-') {strcat (buffer, " -G"); strcat (buffer, txt_c); }
-						if (txt_d[0] != '-') {strcat (buffer, " -W"); strcat (buffer, txt_d); }
-						S[SYM]->record[S[SYM]->n_rows++] = strdup (buffer);
-						if (S[SYM]->n_rows == S[SYM]->n_alloc) S[SYM]->record = GMT_memory (GMT, S[SYM]->record, S[SYM]->n_alloc += GMT_SMALL_CHUNK, char *);
-					}
+					/* Place pen and fill colors in segment header */
+					sprintf (buffer, ">");
+					strcat (buffer, " -G"); strcat (buffer, txt_c);
+					strcat (buffer, " -W"); strcat (buffer, txt_d);
+					S[SYM]->record[S[SYM]->n_rows++] = strdup (buffer);
+					if (S[SYM]->n_rows == S[SYM]->n_alloc) S[SYM]->record = GMT_memory (GMT, S[SYM]->record, S[SYM]->n_alloc += GMT_SMALL_CHUNK, char *);
 					sprintf (buffer, "%s %s", sarg, sub);
 					S[SYM]->record[S[SYM]->n_rows++] = strdup (buffer);
 					if (S[SYM]->n_rows == S[SYM]->n_alloc) S[SYM]->record = GMT_memory (GMT, S[SYM]->record, S[SYM]->n_alloc += GMT_SMALL_CHUNK, char *);
