@@ -2,6 +2,9 @@
 	$Id$
 -----------------------------------------------------------------------------------------
 
+2011-11-29	pwessel
+	* pslegend.c:		Fixed so we can mix filled and non-filled symbols.
+
 2011-11-28	pwessel
 	* gmt_plot.c:		Extended the custom axis annotation to any map projection.
 
